<resources>
    <string name="app_name">dlnelson-CountBook</string>
    <string name="action_settings">Settings</string>
    <string name="initial_value">Initial Value</string>
    <string name="name">Name</string>
    <string name="current_value">Current Value</string>
    <string name="title_activity_edit_counter">edit_counter</string>
    <string name="list_name">Name</string>
    <string name="list_date">Date</string>
    <string name="list_value">value</string>
    <string name="comment_optional">Comment (optional)</string>
    <string name="edit_save">Save</string>
    <string name="edit_delete">Delete</string>
    <string name="edit_cancel">Cancel</string>
    <string name="list_dec">-</string>
    <string name="list_inc">+</string>
    <string name="list_reset">Reset</string>
    <string name="unfilled_fields">Please fill out all required fields.</string>
    <string name="last_changed_date">Last Changed Date</string>
    <string name="set_when_saving_counter">Set when saving counter</string>
</resources>
