<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/name_field"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/list_name"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/date_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_date"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/name_field"
        app:layout_constraintRight_toLeftOf="@+id/value_field"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/value_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/date_field"
        app:layout_constraintLeft_toRightOf="@+id/date_field"
        app:layout_constraintRight_toLeftOf="@+id/dec_button"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/dec_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:text="-"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/value_field"
        app:layout_constraintLeft_toRightOf="@+id/name_field"
        app:layout_constraintRight_toLeftOf="@+id/inc_button"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginRight="0dp" />

    <Button
        android:id="@+id/inc_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="0dp"
        android:text="+"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dec_button"
        app:layout_constraintLeft_toRightOf="@+id/dec_button"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>